# DetectForge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  architecture_diagram.drawio  architecture_diagram.md  docker-compose.yml  main.py  pyproject.toml
api/: main.py
api/routers/: attack_path.py  coverage.py  gaps.py  genealogy.py  nl_query.py  review.py  rules.py  scans.py
api/static/: control.html
commands/: 0_setup_once.ps1  1_reset_demo.ps1  2_start_api.ps1  3_run_scan.ps1  README.md
core/: config.py
core/agent/: orchestrator.py  state.py
core/agent/nodes/: auto_tuner.py  deployer.py  drift_monitor.py  env_scanner.py  gap_prioritizer.py  rule_classifier.py  (+2 more)
core/intelligence/: attack_loader.py  kill_chain_mapper.py  threat_intel.py
core/models/: finetuned_spl.py  foundation_sec.py
core/splunk/: agent_logger.py  mcp_client.py  rest_client.py
dashboard/: setup_dashboards.py
dashboard/splunk_studio/: agent_activity.json  attack_paths.json  coverage_heatmap.json  financial_risk.json  rule_health.json
data/: install_botsv3.ps1
db/: database.py  models.py
docs/: architecture.md
features/attack_path/: graph_builder.py
features/coverage_timeline/: timeline_tracker.py
features/genealogy/: rule_lineage.py
features/nl_interface/: coverage_responder.py
features/review_queue/: queue_manager.py
knowledge/profiles/: energy.json  finance.json  healthcare.json  technology.json
scheduler/: scheduler.py
scheduler/jobs/: threat_intel_sync.py
scripts/: prepare_finetune_data.py  seed_baseline.py
(+5 files in other folders)
