[project]
name = "detectforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langgraph>=1.2.2",
    "networkx>=3.6.1",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "splunk-sdk>=3.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
